syntax = "proto3";

package api.v1.capsule;

import "api/v1/capsule/rollout/status.proto";
import "api/v1/capsule/change.proto";
import "operator/api/v1/pipeline/object_status.proto";
import "api/v1/capsule/job.proto";
import "google/protobuf/timestamp.proto";
import "model/author.proto";

message Status {
  string namespace = 1;
  CapsuleStatus capsule = 2;
  RolloutStatus rollout = 3;
  ContainerConfig container_config = 4;
  InstancesStatus instances = 5;
  repeated InterfaceStatus interfaces = 6;
  repeated ConfigFileStatus config_files = 7;
  repeated CronJobStatus cron_jobs = 8;
}

message CapsuleStatus {
  repeated api.v1.pipeline.ObjectStatus statuses = 1;
}

message RolloutStatus {
  uint64 rollout_id = 1;
  api.v1.capsule.rollout.State state = 2;
  // The error message if the rollout failed
  string error_message = 3;
  // The hash of the commit containing the changes
  string commit_hash = 4;
  // The url to the commit (if known. May be empty)
  string commit_url = 5;
  google.protobuf.Timestamp created_at = 6;
  model.Author created_by = 7;
}

message InstancesStatus {
  // The number of updated instances.
  uint32 num_upgrading = 1;
  // The number of ready instances.
  uint32 num_ready = 2;
  // The number of stuck instances.
  uint32 num_stuck = 3;
  // The number of instances with the wrong version.
  uint32 num_wrong_version = 4;
}

message ContainerConfig {
  string image = 1;
  string command = 2;
  repeated string args = 3;
  map<string, string> environment_variables = 4;
  HorizontalScale scale = 5;
}

message InterfaceStatus {
  message Route {
    HostRoute route = 1;
    repeated api.v1.pipeline.ObjectStatus status = 2;
    Transition transition = 3;
  }

  string name = 1;
  uint32 port = 2;
  repeated Route routes = 3;
  repeated api.v1.pipeline.ObjectStatus status = 4;
  Transition transition = 5;
}

message ConfigFileStatus {
  string path = 1;
  bool isSecret = 2;
  repeated api.v1.pipeline.ObjectStatus status = 3;
  Transition transition = 4;
}

message CronJobStatus {
  string job_name = 1;
  string schedule = 2;
  api.v1.capsule.JobExecution last_execution = 3;
  Transition transition = 4;
}

enum Transition {
  TRANSITION_UNSPECIFIED = 0;
  TRANSITION_BEING_CREATED = 1;
  TRANSITION_UP_TO_DATE = 2;
  TRANSITION_BEING_DELETED = 3;
}
