syntax = "proto3";

package k8s.io.api.autoscaling.v2;

message CrossVersionObjectReference {
  string kind = 1;
  string name = 2;
  string aPIVersion = 3;
}
